Port forward tool (#70)

--- a/terminal/Cargo.toml
+++ b/terminal/Cargo.toml
@@ -23,6 +23,7 @@ required-features = ["server"]
 [dependencies]
 axum-extra = { workspace = true, optional = true, features = ["cookie"] }
 base64 = { workspace = true, optional = true }
+bitflags = { workspace = true, optional = true }
 clap = { workspace = true, optional = true }
 cms = { workspace = true, optional = true }
 const_format = { workspace = true, optional = true }
@@ -92,8 +93,18 @@ fluent-asserter = { workspace = true }
 [features]
 default = ["prod"]
 prod = ["max-level-info", "server-all"]
-server-all = ["terminal-server", "text-editor-server", "converter-server"]
-client-all = ["terminal-client", "text-editor-client", "converter-client"]
+server-all = [
+    "terminal-server",
+    "text-editor-server",
+    "converter-server",
+    "port-forward-server",
+]
+client-all = [
+    "terminal-client",
+    "text-editor-client",
+    "converter-client",
+    "port-forward-client",
+]
 
 client = [
     "dep:stylance",
@@ -150,6 +161,7 @@ diagnostics = ["terrazzo?/diagnostics"]
 no_wasm_build = []
 debug = ["terrazzo?/debug"]
 correlation-id = []
+remotes-ui = []
 
 terminal = ["correlation-id"]
 terminal-client = [
@@ -170,12 +182,14 @@ terminal-server = [
     "server",
     "terminal",
 ]
+
 text-editor = []
 text-editor-client = [
     "client",
     "dep:futures",
     "dep:scopeguard",
     "dep:serde-wasm-bindgen",
+    "remotes-ui",
     "text-editor",
     "web-sys/KeyboardEvent",
 ]
@@ -186,11 +200,13 @@ text-editor-server = [
     "server",
     "text-editor",
 ]
+
 converter = []
 converter-client = [
     "client",
     "converter",
     "dep:web-sys",
+    "remotes-ui",
     "web-sys/HtmlTextAreaElement",
     "web-sys/InputEvent",
 ]
@@ -205,6 +221,20 @@ converter-server = [
     "dep:x509-parser",
     "server",
 ]
+
+port-forward = []
+port-forward-client = [
+    "client",
+    "dep:bitflags",
+    "dep:scopeguard",
+    "dep:web-sys",
+    "port-forward",
+    "remotes-ui",
+    "web-sys/HtmlOptionElement",
+    "web-sys/HtmlSelectElement",
+    "web-sys/KeyboardEvent",
+]
+port-forward-server = ["port-forward", "server"]
 
 [package.metadata.stylance]
 output_file = "./target/css/terrazzo-terminal.scss"
