--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,7 +27,7 @@ incremental = true       # Incremental compilation.
 terrazzo-pty = { version = "0.1.17", path = "pty" }
 
 async-trait = { version = "0.1.88" }
-autoclone = { version = "0.1.16" }
+autoclone = { version = "0.1.17" }
 axum = { version = "0.8.4" }
 axum-extra = { version = "0.10.1" }
 base64 = { version = "0.22.1" }
@@ -38,10 +38,10 @@ chrono = { version = "0.4.41", default-features = false, features = [
     "std",
     "wasmbind",
 ] }
-clap = { version = "4.5.41", features = ["derive"] }
+clap = { version = "4.5.42", features = ["derive"] }
 cms = { version = "0.2.3" }
 const_format = { version = "0.2.34" }
-darling = { version = "0.21.0" }
+darling = { version = "0.21.1" }
 dashmap = { version = "6.1.0" }
 deluxe = { version = "0.5.0" }
 fluent-asserter = { version = "0.1.9" }
@@ -55,53 +55,54 @@ jsonwebtoken = { version = "9.3.1" }
 libc = { version = "0.2.174" }
 mime = { version = "0.3.17" }
 mime_guess = { version = "2.0.5" }
-nameth = { version = "0.1.16" }
+nameth = { version = "0.1.17" }
 nix = { version = "0.30.1" }
-notify = { version = "8.1.0" }
+notify = { version = "8.2.0" }
 oid-registry = { version = "0.8.1" }
 openssl = { version = "0.10.73" }
 pbkdf2 = { version = "0.12.2" }
 pin-project = { version = "1.1.10" }
-prettyplease = { version = "0.2.35" }
+prettyplease = { version = "0.2.36" }
 proc-macro2 = { version = "1.0.95" }
-prost = { version = "0.13.5" }
-prost-types = { version = "0.13.5" }
+prost = { version = "0.14.1" }
+prost-types = { version = "0.14.1" }
 quote = { version = "1.0.40" }
 regex = { version = "1.11.1" }
 reqwest-wasm = { version = "0.11.16" }
 rpassword = { version = "7.4.0" }
 rsass-macros = { version = "0.29.0" }
-rustix = { version = "1.0.7" }
+rustix = { version = "1.0.8" }
 scopeguard = { version = "1.2.0" }
 serde = { version = "1.0.219", features = ["derive", "rc"] }
-serde_json = { version = "1.0.140" }
+serde_json = { version = "1.0.142" }
 serde_urlencoded = { version = "0.7.1" }
 serde_yaml_ng = { version = "0.10.0" }
 serde-wasm-bindgen = { version = "0.6.5" }
-server_fn = { version = "0.8.2" }
+server_fn = { version = "0.8.5" }
 sha2 = { version = "0.10.9" }
 simple_asn1 = { version = "0.6.3" }
 static_assertions = { version = "1.1.0" }
-stylance = { version = "0.6.0" }
+stylance = { version = "0.7.0" }
 syn = { version = "2.0.104" }
-terrazzo = { version = "0.1.16", default-features = false }
-terrazzo-build = { version = "0.1.16" }
+terrazzo = { version = "0.1.17", default-features = false }
+terrazzo-build = { version = "0.1.17" }
 thiserror = { version = "2.0.12" }
-tokio = { version = "1.46.1" }
+tokio = { version = "1.47.1" }
 tokio-stream = { version = "0.1.17" }
-tokio-util = { version = "0.7.15" }
-toml = { version = "0.9.2" }
-tonic = { version = "0.13.1" }
-tonic-build = { version = "0.13.1" }
+tokio-util = { version = "0.7.16" }
+toml = { version = "0.9.5" }
+tonic = { version = "0.14.0" }
+tonic-prost = { version = "0.14.0" }
+tonic-prost-build = { version = "0.14.0" }
 tower = { version = "0.5.2" }
 tower-http = { version = "0.6.4" }
 tracing = { version = "0.1.41" }
 tracing-futures = { version = "0.2.5" }
 tracing-subscriber = { version = "0.3.19" }
 tracing-subscriber-wasm = { version = "0.1.0" }
-trz-gateway-client = { version = "0.1.16" }
-trz-gateway-common = { version = "0.1.16" }
-trz-gateway-server = { version = "0.1.16" }
+trz-gateway-client = { version = "0.1.17" }
+trz-gateway-common = { version = "0.1.17" }
+trz-gateway-server = { version = "0.1.17" }
 unescaper = { version = "0.1.6" }
 uuid = { version = "1.17.0" }
 wasm-bindgen = { version = "0.2.100" }
