--- a/.github/actions/check/action.yml
+++ b/.github/actions/check/action.yml
@@ -19,6 +19,7 @@ runs:
         cargo check --bin terrazzo-terminal --no-default-features --features max-level-debug,debug,diagnostics --features terminal-server
         cargo check --bin terrazzo-terminal --no-default-features --features max-level-debug,debug,diagnostics --features text-editor-server
         cargo check --bin terrazzo-terminal --no-default-features --features max-level-debug,debug,diagnostics --features converter-server
+        cargo check --bin terrazzo-terminal --no-default-features --features max-level-debug,debug,diagnostics --features port-forward-server
         cargo check --bin game --no-default-features --features server,max-level-debug,debug,diagnostics
         cargo check --bin game --no-default-features --features server,max-level-info --release
       shell: bash
@@ -31,6 +32,7 @@ runs:
         cargo clippy --bin terrazzo-terminal --no-default-features --features max-level-debug,debug,diagnostics --features terminal-server
         cargo clippy --bin terrazzo-terminal --no-default-features --features max-level-debug,debug,diagnostics --features text-editor-server
         cargo clippy --bin terrazzo-terminal --no-default-features --features max-level-debug,debug,diagnostics --features converter-server
+        cargo clippy --bin terrazzo-terminal --no-default-features --features max-level-debug,debug,diagnostics --features port-forward-server
         cargo clippy --bin game --no-default-features --features server,max-level-debug,debug,diagnostics
         cargo clippy --bin game --no-default-features --features server,max-level-info --release
       shell: bash
