--- a/.github/actions/check/action.yml
+++ b/.github/actions/check/action.yml
@@ -13,28 +13,28 @@ runs:
 
     - name: Check
       run: |
-        cargo check --no-default-features --features max-level-debug,diagnostics,client-all,server-all
-        cargo check --bin terrazzo-terminal --no-default-features --features server-all --features max-level-debug,diagnostics
-        cargo check --bin terrazzo-terminal --no-default-features --features server-all --features max-level-info
-        cargo check --bin terrazzo-terminal --no-default-features --features max-level-debug,debug,diagnostics --features terminal-server
-        cargo check --bin terrazzo-terminal --no-default-features --features max-level-debug,debug,diagnostics --features text-editor-server
-        cargo check --bin terrazzo-terminal --no-default-features --features max-level-debug,debug,diagnostics --features converter-server
-        cargo check --bin terrazzo-terminal --no-default-features --features max-level-debug,debug,diagnostics --features port-forward-server
-        cargo check --bin game --no-default-features --features server,max-level-debug,debug,diagnostics
-        cargo check --bin game --no-default-features --features server,max-level-info --release
+        cargo check --locked --no-default-features --features max-level-debug,diagnostics,client-all,server-all
+        cargo check --locked --bin terrazzo-terminal --no-default-features --features server-all --features max-level-debug,diagnostics
+        cargo check --locked --bin terrazzo-terminal --no-default-features --features server-all --features max-level-info
+        cargo check --locked --bin terrazzo-terminal --no-default-features --features max-level-debug,debug,diagnostics --features terminal-server
+        cargo check --locked --bin terrazzo-terminal --no-default-features --features max-level-debug,debug,diagnostics --features text-editor-server
+        cargo check --locked --bin terrazzo-terminal --no-default-features --features max-level-debug,debug,diagnostics --features converter-server
+        cargo check --locked --bin terrazzo-terminal --no-default-features --features max-level-debug,debug,diagnostics --features port-forward-server
+        cargo check --locked --bin game --no-default-features --features server,max-level-debug,debug,diagnostics
+        cargo check --locked --bin game --no-default-features --features server,max-level-info --release
       shell: bash
 
     - name: Clippy
       run: |
-        cargo clippy --no-default-features --features max-level-debug,diagnostics,client-all,server-all
-        cargo clippy --bin terrazzo-terminal --no-default-features --features server-all --features max-level-debug,diagnostics
-        cargo clippy --bin terrazzo-terminal --no-default-features --features server-all --features max-level-info
-        cargo clippy --bin terrazzo-terminal --no-default-features --features max-level-debug,debug,diagnostics --features terminal-server
-        cargo clippy --bin terrazzo-terminal --no-default-features --features max-level-debug,debug,diagnostics --features text-editor-server
-        cargo clippy --bin terrazzo-terminal --no-default-features --features max-level-debug,debug,diagnostics --features converter-server
-        cargo clippy --bin terrazzo-terminal --no-default-features --features max-level-debug,debug,diagnostics --features port-forward-server
-        cargo clippy --bin game --no-default-features --features server,max-level-debug,debug,diagnostics
-        cargo clippy --bin game --no-default-features --features server,max-level-info --release
+        cargo clippy --locked --no-default-features --features max-level-debug,diagnostics,client-all,server-all
+        cargo clippy --locked --bin terrazzo-terminal --no-default-features --features server-all --features max-level-debug,diagnostics
+        cargo clippy --locked --bin terrazzo-terminal --no-default-features --features server-all --features max-level-info
+        cargo clippy --locked --bin terrazzo-terminal --no-default-features --features max-level-debug,debug,diagnostics --features terminal-server
+        cargo clippy --locked --bin terrazzo-terminal --no-default-features --features max-level-debug,debug,diagnostics --features text-editor-server
+        cargo clippy --locked --bin terrazzo-terminal --no-default-features --features max-level-debug,debug,diagnostics --features converter-server
+        cargo clippy --locked --bin terrazzo-terminal --no-default-features --features max-level-debug,debug,diagnostics --features port-forward-server
+        cargo clippy --locked --bin game --no-default-features --features server,max-level-debug,debug,diagnostics
+        cargo clippy --locked --bin game --no-default-features --features server,max-level-info --release
       shell: bash
 
     - name: Rustfmt
@@ -42,5 +42,5 @@ runs:
       shell: bash
 
     - name: Documentation
-      run: cargo doc --all-features
+      run: cargo doc --locked --all-features
       shell: bash
