--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,7 +27,7 @@ incremental = true       # Incremental compilation.
 terrazzo-pty = { version = "0.1.19", path = "pty" }
 
 async-trait = { version = "0.1.89" }
-autoclone = { version = "0.1.17" }
+autoclone = { version = "0.1.18" }
 axum = { version = "0.8.7" }
 axum-extra = { version = "0.12.2" }
 base64 = { version = "0.22.1" }
@@ -38,7 +38,7 @@ chrono = { version = "0.4.41", default-features = false, features = [
     "std",
     "wasmbind",
 ] }
-clap = { version = "4.5.52", features = ["derive"] }
+clap = { version = "4.5.53", features = ["derive"] }
 cms = { version = "0.2.3" }
 const_format = { version = "0.2.35" }
 darling = { version = "0.21.3" }
@@ -51,11 +51,11 @@ http = { version = "1.3.1" }
 humantime = { version = "2.3.0" }
 include_directory = { version = "0.1.1" }
 inventory = { version = "0.3.21" }
-jsonwebtoken = { version = "9.3.1" }
+jsonwebtoken = { version = "10.2.0", features = ["aws_lc_rs"] }
 libc = { version = "0.2.177" }
 mime = { version = "0.3.17" }
 mime_guess = { version = "2.0.5" }
-nameth = { version = "0.1.17" }
+nameth = { version = "0.1.18" }
 nix = { version = "0.30.1" }
 notify = { version = "8.2.0" }
 oid-registry = { version = "0.8.1" }
@@ -83,9 +83,9 @@ sha2 = { version = "0.10.9" }
 simple_asn1 = { version = "0.6.3" }
 static_assertions = { version = "1.1.0" }
 stylance = { version = "0.7.1" }
-syn = { version = "2.0.110" }
-terrazzo = { version = "0.1.17", default-features = false }
-terrazzo-build = { version = "0.1.17" }
+syn = { version = "2.0.111" }
+terrazzo = { version = "0.1.18", default-features = false }
+terrazzo-build = { version = "0.1.18" }
 thiserror = { version = "2.0.17" }
 tokio = { version = "1.48.0" }
 tokio-stream = { version = "0.1.17" }
@@ -100,13 +100,13 @@ tracing = { version = "0.1.41" }
 tracing-futures = { version = "0.2.5" }
 tracing-subscriber = { version = "0.3.20" }
 tracing-subscriber-wasm = { version = "0.1.0" }
-trz-gateway-client = { version = "0.1.17" }
-trz-gateway-common = { version = "0.1.17" }
-trz-gateway-server = { version = "0.1.17" }
+trz-gateway-client = { version = "0.1.18" }
+trz-gateway-common = { version = "0.1.18" }
+trz-gateway-server = { version = "0.1.18" }
 unescaper = { version = "0.1.6" }
 uuid = { version = "1.18.1" }
-wasm-bindgen = { version = "0.2.103" }
-wasm-bindgen-futures = { version = "0.4.53" }
+wasm-bindgen = { version = "0.2.105" }
+wasm-bindgen-futures = { version = "0.4.55" }
 wasm-bindgen-test = { version = "0.3.50" }
 wasm-streams = { version = "0.4.2" }
 web-sys = { version = "0.3.80" }
