--- a/.github/actions/setup/action.yml
+++ b/.github/actions/setup/action.yml
@@ -28,7 +28,7 @@ runs:
           ~/.cargo/registry/src/
           target/
           terrazzo/target/wasm
-        key: ${{ runner.os }}-cargo-${{ github.job }}-${{ hashFiles('**/Cargo.lock') }}
+        key: ${{ runner.os }}-cargo-${{ github.job }}-${{ hashFiles('./**/Cargo.lock') }}
     - name: Setup cache for Rust compilation
       if: ${{ inputs.cache-level == 'lenient' }}
       uses: actions/cache@v4
@@ -43,7 +43,7 @@ runs:
           ~/.cargo/registry/src/
           target/
           terrazzo/target/wasm
-        key: ${{ runner.os }}-cargo-${{ github.job }}-${{ hashFiles('**/Cargo.lock') }}
+        key: ${{ runner.os }}-cargo-${{ github.job }}-${{ hashFiles('./**/Cargo.lock') }}
         restore-keys: ${{ runner.os }}-cargo-${{ github.job }}
 
     - name: Add wasm32 compilation target
