--- a/Cargo.toml
+++ b/Cargo.toml
@@ -89,6 +89,7 @@ syn = { version = "2.0.111" }
 terrazzo = { version = "0.1.20", default-features = false }
 terrazzo-build = { version = "0.1.19" }
 thiserror = { version = "2.0.17" }
+tls-parser = { version = "0.12.2" }
 tokio = { version = "1.48.0" }
 tokio-rustls = { version = "0.26.4" }
 tokio-stream = { version = "0.1.17" }
