--- a/Cargo.toml
+++ b/Cargo.toml
@@ -86,6 +86,7 @@ simple_asn1 = { version = "0.6.3" }
 static_assertions = { version = "1.1.0" }
 stylance = { version = "0.7.4" }
 syn = { version = "2.0.111" }
+tantivy = { version = "0.25.0" }
 terrazzo = { version = "0.1.20", default-features = false }
 terrazzo-build = { version = "0.1.19" }
 thiserror = { version = "2.0.17" }
