--- a/terminal/Cargo.toml
+++ b/terminal/Cargo.toml
@@ -56,6 +56,7 @@ sha2 = { workspace = true, optional = true }
 simple_asn1 = { workspace = true, optional = true }
 static_assertions = { workspace = true, optional = true }
 stylance = { workspace = true, optional = true }
+tantivy = { workspace = true, optional = true }
 terrazzo = { workspace = true, optional = true }
 terrazzo-pty = { workspace = true, optional = true }
 thiserror = { workspace = true }
@@ -100,16 +101,16 @@ fluent-asserter = { workspace = true }
 default = ["prod"]
 prod = ["max-level-info", "server-all"]
 server-all = [
-    "terminal-server",
-    "text-editor-server",
     "converter-server",
     "port-forward-server",
+    "terminal-server",
+    "text-editor-server",
 ]
 client-all = [
-    "terminal-client",
-    "text-editor-client",
     "converter-client",
     "port-forward-client",
+    "terminal-client",
+    "text-editor-client",
 ]
 
 client = [
@@ -203,6 +204,7 @@ text-editor-client = [
 text-editor-server = [
     "dep:libc",
     "dep:notify",
+    #"dep:tantivy",
     "dep:tokio-stream",
     "server",
     "text-editor",
