--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,16 +29,16 @@ terrazzo-pty = { version = "0.1.22", path = "pty" }
 async-trait = { version = "0.1.89" }
 autoclone = { version = "0.1.20" }
 axum = { version = "0.8.8" }
-axum-extra = { version = "0.12.3" }
+axum-extra = { version = "0.12.5" }
 base64 = { version = "0.22.1" }
 bitflags = { version = "2.10.0" }
 bytes = { version = "1.11.0" }
-chrono = { version = "0.4.41", default-features = false, features = [
+chrono = { version = "0.4.42", default-features = false, features = [
     "now",
     "std",
     "wasmbind",
 ] }
-clap = { version = "4.5.53", features = ["derive"] }
+clap = { version = "4.5.54", features = ["derive"] }
 cms = { version = "0.2.3" }
 const_format = { version = "0.2.35" }
 darling = { version = "0.23.0" }
@@ -53,7 +53,7 @@ humantime = { version = "2.3.0" }
 include_directory = { version = "0.1.1" }
 inventory = { version = "0.3.21" }
 jsonwebtoken = { version = "10.2.0", features = ["aws_lc_rs"] }
-libc = { version = "0.2.177" }
+libc = { version = "0.2.179" }
 mime = { version = "0.3.17" }
 mime_guess = { version = "2.0.5" }
 nameth = { version = "0.1.20" }
@@ -64,7 +64,7 @@ openssl = { version = "0.10.75" }
 pbkdf2 = { version = "0.12.2" }
 pin-project = { version = "1.1.10" }
 prettyplease = { version = "0.2.37" }
-proc-macro2 = { version = "1.0.103" }
+proc-macro2 = { version = "1.0.104" }
 prost = { version = "0.14.1" }
 prost-types = { version = "0.14.1" }
 quote = { version = "1.0.42" }
@@ -73,29 +73,29 @@ reqwest-wasm = { version = "0.11.16" }
 rpassword = { version = "7.4.0" }
 rsass-macros = { version = "0.29.0" }
 rustix = { version = "1.1.3" }
-rustls-native-certs = { version = "0.8.2" }
+rustls-native-certs = { version = "0.8.3" }
 scopeguard = { version = "1.2.0" }
 serde = { version = "1.0.228", features = ["derive", "rc"] }
-serde_json = { version = "1.0.147" }
+serde_json = { version = "1.0.148" }
 serde_urlencoded = { version = "0.7.1" }
 serde_yaml_ng = { version = "0.10.0" }
 serde-wasm-bindgen = { version = "0.6.5" }
-server_fn = { version = "0.8.8" }
+server_fn = { version = "0.8.9" }
 sha2 = { version = "0.10.9" }
 simple_asn1 = { version = "0.6.3" }
 static_assertions = { version = "1.1.0" }
 stylance = { version = "0.7.4" }
-syn = { version = "2.0.111" }
+syn = { version = "2.0.112" }
 tantivy = { version = "0.25.0" }
 terrazzo = { version = "0.1.20", default-features = false }
-terrazzo-build = { version = "0.1.19" }
+terrazzo-build = { version = "0.1.20" }
 thiserror = { version = "2.0.17" }
 tls-parser = { version = "0.12.2" }
-tokio = { version = "1.48.0" }
+tokio = { version = "1.49.0" }
 tokio-rustls = { version = "0.26.4" }
 tokio-stream = { version = "0.1.17" }
 tokio-util = { version = "0.7.17" }
-toml = { version = "0.9.8" }
+toml = { version = "0.9.10+spec-1.1.0" }
 tonic = { version = "0.14.2" }
 tonic-prost = { version = "0.14.2" }
 tonic-prost-build = { version = "0.14.2" }
@@ -128,3 +128,12 @@ enum_variant_names = "allow"
 needless_return = "allow"
 too_many_arguments = "allow"
 type_complexity = "allow"
+
+# <TODO>: remove
+[patch.crates-io]
+nameth = { path = "../Terrazzo/utils/nameth/nameth" }
+terrazzo = { path = "../Terrazzo/framework/terrazzo" }
+trz-gateway-client = { path = "../Terrazzo/remote/client" }
+trz-gateway-common = { path = "../Terrazzo/remote/common" }
+trz-gateway-server = { path = "../Terrazzo/remote/server" }
+# </TODO>
